[package]
name = "aura-exec-conflict"
description = "Domain-scoped advisory locks for the exec layer (Phase 5)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
