[package]
name = "aura-exec-conflict"
description = "Domain-scoped advisory locks for the exec layer (Phase 5)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

# Phase 9: `tracing` is wired in for the lease-acquire / release
# spans that land in the Phase 10 follow-up; the crate compiles
# today without it but the dep is kept so the wiring is
# manifest-stable.
[package.metadata.cargo-machete]
ignored = ["tracing"]

[lints]
workspace = true
