[package]
name = "aura-exec-isolation"
description = "Worktree + copy isolation primitives for subagent execution (Phase 5)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
