[package]
name = "aura-fleet-daemon"
description = "Fleet-layer composition root wiring registry + spawn + dispatch + quota into a single FleetDaemon (Phase 7a)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-core-modes = { path = "../aura-core-modes" }
aura-store = { path = "../aura-store" }
aura-fleet-registry = { path = "../aura-fleet-registry" }
aura-fleet-spawn = { path = "../aura-fleet-spawn" }
aura-fleet-dispatch = { path = "../aura-fleet-dispatch" }
aura-fleet-quota = { path = "../aura-fleet-quota" }
aura-fleet-mailbox = { path = "../aura-fleet-mailbox" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing = { workspace = true }

[lints]
workspace = true
