[package]
name = "aura-fleet-daemon"
description = "Fleet-layer composition root wiring registry + spawn + dispatch + quota into a single FleetDaemon (Phase 7a)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-core-modes = { path = "../aura-core-modes" }
aura-store = { path = "../aura-store" }
aura-fleet-registry = { path = "../aura-fleet-registry" }
aura-fleet-spawn = { path = "../aura-fleet-spawn" }
aura-fleet-dispatch = { path = "../aura-fleet-dispatch" }
aura-fleet-quota = { path = "../aura-fleet-quota" }
aura-fleet-mailbox = { path = "../aura-fleet-mailbox" }
aura-config = { path = "../aura-config" }
aura-context-skills = { path = "../aura-context-skills" }
aura-plugin-core = { path = "../aura-plugin-core" }
aura-plugin-hooks = { path = "../aura-plugin-hooks" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Phase 9: `aura-core` is re-exported through `aura-fleet-spawn`
# and used by call sites that consume the daemon handle, so
# machete misses the indirect use; we keep the explicit dep so
# the layer-boundary test can audit the topology directly from
# the manifest.
[package.metadata.cargo-machete]
ignored = ["aura-core"]

[lints]
workspace = true
