[package]
name = "aura-fleet-dispatch"
description = "Fleet-layer agent-job dispatcher (Phase 7a — single source adapter; Phase 7b adds mailbox)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-core-modes = { path = "../aura-core-modes" }
aura-fleet-spawn = { path = "../aura-fleet-spawn" }
async-trait = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Phase 9: `async-trait` and `tokio` are wired in for the
# upcoming dispatcher trait + spawn-driven event loop work; the
# Phase 7a single-source adapter compiles without them but the
# deps stay manifest-pinned for the Phase 10 follow-up.
[package.metadata.cargo-machete]
ignored = ["async-trait", "tokio"]

[lints]
workspace = true
